827/asgn3/parser/parse.output
Grammar

    0 $accept: start $end

    1 start: file_input

    2 file_input: star_NEWLINE_stmt ENDMARKER

    3 pick_NEWLINE_stmt: NEWLINE
    4                  | stmt

    5 star_NEWLINE_stmt: star_NEWLINE_stmt pick_NEWLINE_stmt
    6                  | %empty

    7 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT dotted_name NEWLINE

    9 opt_arglist: arglist
   10            | %empty

   11 decorators: decorators decorator
   12           | decorator

   13 decorated: decorators classdef
   14          | decorators funcdef

   15 funcdef: DEF NAME parameters COLON suite

   16 parameters: LPAR varargslist RPAR
   17           | LPAR RPAR

   18 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   19            | star_fpdef_COMMA fpdef opt_EQUAL_test opt_COMMA

   20 opt_EQUAL_test: EQUAL test
   21               | %empty

   22 star_fpdef_COMMA: star_fpdef_COMMA fpdef opt_EQUAL_test COMMA
   23                 | %empty

   24 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   25                    | %empty

   26 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   27                     | DOUBLESTAR NAME

   28 opt_COMMA: COMMA
   29          | %empty

   30 fpdef: NAME
   31      | LPAR fplist RPAR

   32 fplist: fpdef star_fpdef_notest COMMA
   33       | fpdef star_fpdef_notest

   34 star_fpdef_notest: star_fpdef_notest COMMA fpdef
   35                  | %empty

   36 stmt: simple_stmt
   37     | compound_stmt

   38 simple_stmt: small_stmt star_SEMI_small_stmt SEMI NEWLINE
   39            | small_stmt star_SEMI_small_stmt NEWLINE

   40 star_SEMI_small_stmt: star_SEMI_small_stmt SEMI small_stmt
   41                     | %empty

   42 small_stmt: expr_stmt
   43           | print_stmt
   44           | del_stmt
   45           | pass_stmt
   46           | flow_stmt
   47           | import_stmt
   48           | global_stmt
   49           | exec_stmt
   50           | assert_stmt

   51 expr_stmt: testlist augassign pick_yield_expr_testlist
   52          | testlist star_EQUAL

   53 pick_yield_expr_testlist: yield_expr
   54                         | testlist

   55 star_EQUAL: star_EQUAL EQUAL pick_yield_expr_testlist
   56           | %empty

   57 augassign: PLUSEQUAL
   58          | MINEQUAL
   59          | STAREQUAL
   60          | SLASHEQUAL
   61          | PERCENTEQUAL
   62          | AMPEREQUAL
   63          | VBAREQUAL
   64          | CIRCUMFLEXEQUAL
   65          | LEFTSHIFTEQUAL
   66          | RIGHTSHIFTEQUAL
   67          | DOUBLESTAREQUAL
   68          | DOUBLESLASHEQUAL

   69 print_stmt: PRINT opt_test
   70           | PRINT RIGHTSHIFT test opt_test_2

   71 star_COMMA_test: star_COMMA_test COMMA test
   72                | %empty

   73 opt_test: test star_COMMA_test opt_COMMA
   74         | %empty

   75 plus_COMMA_test: plus_COMMA_test COMMA test
   76                | COMMA test

   77 opt_test_2: plus_COMMA_test opt_COMMA
   78           | %empty

   79 del_stmt: DEL exprlist

   80 pass_stmt: PASS

   81 flow_stmt: break_stmt
   82          | continue_stmt
   83          | return_stmt
   84          | raise_stmt
   85          | yield_stmt

   86 break_stmt: BREAK

   87 continue_stmt: CONTINUE

   88 return_stmt: RETURN testlist
   89            | RETURN

   90 yield_stmt: yield_expr

   91 raise_stmt: RAISE test opt_test_3
   92           | RAISE

   93 opt_COMMA_test: COMMA test
   94               | %empty

   95 opt_test_3: COMMA test opt_COMMA_test
   96           | %empty

   97 import_stmt: import_name
   98            | import_from

   99 import_name: IMPORT dotted_as_names

  100 import_from: FROM pick_dotted_name IMPORT pick_STAR_import

  101 pick_dotted_name: star_DOT dotted_name
  102                 | star_DOT DOT

  103 pick_STAR_import: STAR
  104                 | LPAR import_as_names RPAR
  105                 | import_as_names

  106 import_as_name: NAME AS NAME
  107               | NAME

  108 dotted_as_name: dotted_name AS NAME
  109               | dotted_name

  110 import_as_names: import_as_name star_COMMA_import_as_name COMMA
  111                | import_as_name star_COMMA_import_as_name

  112 star_COMMA_import_as_name: star_COMMA_import_as_name COMMA import_as_name
  113                          | %empty

  114 dotted_as_names: dotted_as_name
  115                | dotted_as_names COMMA dotted_as_name

  116 dotted_name: NAME
  117            | dotted_name DOT NAME

  118 global_stmt: GLOBAL NAME star_COMMA_NAME

  119 star_COMMA_NAME: star_COMMA_NAME COMMA NAME
  120                | %empty

  121 exec_stmt: EXEC expr IN test opt_COMMA_test
  122          | EXEC expr

  123 assert_stmt: ASSERT test COMMA test
  124            | ASSERT test

  125 compound_stmt: if_stmt
  126              | while_stmt
  127              | for_stmt

  128 $@1: %empty

  129 compound_stmt: $@1 try_stmt
  130              | with_stmt
  131              | funcdef
  132              | classdef
  133              | decorated

  134 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  135        | IF test COLON suite star_ELIF

  136 star_ELIF: star_ELIF ELIF test COLON suite
  137          | %empty

  138 while_stmt: WHILE test COLON suite ELSE COLON suite
  139           | WHILE test COLON suite

  140 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  141         | FOR exprlist IN testlist COLON suite

  142 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  143         | TRY COLON suite FINALLY COLON suite

  144 plus_except: plus_except except_clause COLON suite
  145            | except_clause COLON suite

  146 opt_ELSE: ELSE COLON suite
  147         | %empty

  148 opt_FINALLY: FINALLY COLON suite
  149            | %empty

  150 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  151 star_COMMA_with_item: star_COMMA_with_item COMMA with_item
  152                     | %empty

  153 with_item: test AS expr
  154          | test

  155 except_clause: EXCEPT test opt_AS_COMMA
  156              | EXCEPT

  157 pick_AS_COMMA: AS
  158              | COMMA

  159 opt_AS_COMMA: pick_AS_COMMA test
  160             | %empty

  161 suite: simple_stmt
  162      | NEWLINE INDENT plus_stmt DEDENT

  163 plus_stmt: plus_stmt stmt
  164          | stmt

  165 testlist_safe: old_test plus_COMMA_old_test opt_COMMA
  166              | old_test

  167 plus_COMMA_old_test: plus_COMMA_old_test COMMA old_test
  168                    | COMMA old_test

  169 old_test: or_test
  170         | old_lambdef

  171 old_lambdef: LAMBDA varargslist COLON old_test
  172            | LAMBDA COLON old_test

  173 test: or_test opt_IF_ELSE
  174     | lambdef

  175 opt_IF_ELSE: IF or_test ELSE test
  176            | %empty

  177 or_test: and_test
  178        | or_test OR and_test

  179 and_test: not_test
  180         | and_test AND not_test

  181 not_test: NOT not_test
  182         | comparison

  183 comparison: expr
  184           | comparison comp_op expr

  185 comp_op: LESS
  186        | GREATER
  187        | EQEQUAL
  188        | GREATEREQUAL
  189        | LESSEQUAL
  190        | GRLT
  191        | NOTEQUAL
  192        | IN
  193        | NOT IN
  194        | IS
  195        | IS NOT

  196 expr: xor_expr
  197     | expr BAR xor_expr

  198 xor_expr: and_expr
  199         | xor_expr CIRCUMFLEX and_expr

  200 and_expr: shift_expr
  201         | and_expr AMPERSAND shift_expr

  202 shift_expr: arith_expr
  203           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  204 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  205                          | RIGHTSHIFT

  206 arith_expr: term
  207           | arith_expr pick_PLUS_MINUS term

  208 pick_PLUS_MINUS: PLUS
  209                | MINUS

  210 term: factor
  211     | term pick_multop factor

  212 pick_multop: STAR
  213            | SLASH
  214            | PERCENT
  215            | DOUBLESLASH

  216 factor: pick_unop factor
  217       | power

  218 pick_unop: PLUS
  219          | MINUS
  220          | TILDE

  221 power: atom star_trailer DOUBLESTAR factor
  222      | atom star_trailer

  223 star_trailer: star_trailer trailer
  224             | %empty

  225 atom: LPAR opt_yield_test RPAR
  226     | LSQB opt_listmaker RSQB
  227     | LBRACE opt_dictorsetmaker RBRACE
  228     | BACKQUOTE testlist1 BACKQUOTE
  229     | NAME
  230     | NUMBER
  231     | plus_STRING

  232 pick_yield_expr_testlist_comp: yield_expr
  233                              | testlist_comp

  234 opt_yield_test: pick_yield_expr_testlist_comp
  235               | %empty

  236 opt_listmaker: listmaker
  237              | %empty

  238 opt_dictorsetmaker: dictorsetmaker
  239                   | %empty

  240 plus_STRING: plus_STRING STRING
  241            | STRING

  242 listmaker: test list_for
  243          | test star_COMMA_test opt_COMMA

  244 testlist_comp: test comp_for
  245              | test star_COMMA_test opt_COMMA

  246 lambdef: LAMBDA varargslist COLON test
  247        | LAMBDA COLON test

  248 trailer: LPAR opt_arglist RPAR
  249        | LSQB subscriptlist RSQB
  250        | DOT NAME

  251 subscriptlist: subscript star_COMMA_subscript COMMA
  252              | subscript star_COMMA_subscript

  253 star_COMMA_subscript: star_COMMA_subscript COMMA subscript
  254                     | %empty

  255 subscript: DOT DOT DOT
  256          | test
  257          | opt_test_only COLON opt_test_only opt_sliceop

  258 opt_test_only: test
  259              | %empty

  260 opt_sliceop: sliceop
  261            | %empty

  262 sliceop: COLON test
  263        | COLON

  264 exprlist: expr star_COMMA_expr COMMA
  265         | expr star_COMMA_expr

  266 star_COMMA_expr: star_COMMA_expr COMMA expr
  267                | %empty

  268 testlist: test star_COMMA_test COMMA
  269         | test star_COMMA_test

  270 dictorsetmaker: test COLON test pick_for_test_test
  271               | test pick_for_test

  272 star_test_COLON_test: star_test_COLON_test COMMA test COLON test
  273                     | %empty

  274 pick_for_test_test: comp_for
  275                   | star_test_COLON_test opt_COMMA

  276 pick_for_test: comp_for
  277              | star_COMMA_test opt_COMMA

  278 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  279         | CLASS NAME COLON suite

  280 opt_testlist: testlist
  281             | %empty

  282 arglist: star_argument_COMMA pick_argument

  283 star_argument_COMMA: star_argument_COMMA argument COMMA
  284                    | %empty

  285 star_COMMA_argument: star_COMMA_argument COMMA argument
  286                    | %empty

  287 opt_DOUBLESTAR_test: COMMA DOUBLESTAR test
  288                    | %empty

  289 pick_argument: argument opt_COMMA
  290              | STAR test star_COMMA_argument opt_DOUBLESTAR_test
  291              | DOUBLESTAR test

  292 argument: test opt_comp_for
  293         | test EQUAL test

  294 opt_comp_for: comp_for
  295             | %empty

  296 list_iter: list_for
  297          | list_if

  298 list_for: FOR exprlist IN testlist_safe list_iter
  299         | FOR exprlist IN testlist_safe

  300 list_if: IF old_test list_iter
  301        | IF old_test

  302 comp_iter: comp_for
  303          | comp_if

  304 comp_for: FOR exprlist IN or_test comp_iter
  305         | FOR exprlist IN or_test

  306 comp_if: IF old_test comp_iter
  307        | IF old_test

  308 testlist1: test
  309          | testlist1 COMMA test

  310 yield_expr: YIELD testlist
  311           | YIELD

  312 star_DOT: star_DOT DOT
  313         | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 62
AMPERSAND (259) 201
AND (260) 180
AS (261) 106 108 153 157
ASSERT (262) 123 124
AT (263) 7 8
BACKQUOTE (264) 228
BAR (265) 197
BREAK (266) 86
CIRCUMFLEX (267) 199
CIRCUMFLEXEQUAL (268) 64
CLASS (269) 278 279
COLON (270) 15 134 135 136 138 139 140 141 142 143 144 145 146 148
    150 171 172 246 247 257 262 263 270 272 278 279
COMMA (271) 22 24 28 32 34 71 75 76 93 95 110 112 115 119 123 151 158
    167 168 251 253 264 266 268 272 283 285 287 309
CONTINUE (272) 87
DEDENT (273) 162
DEF (274) 15
DEL (275) 79
DOT (276) 102 117 250 255 312
DOUBLESLASH (277) 215
DOUBLESLASHEQUAL (278) 68
DOUBLESTAR (279) 24 27 221 287 291
DOUBLESTAREQUAL (280) 67
ELIF (281) 136
ELSE (282) 134 138 140 146 175
ENDMARKER (283) 2
EQEQUAL (284) 187
EQUAL (285) 20 55 293
EXCEPT (286) 155 156
EXEC (287) 121 122
FINALLY (288) 143 148
FOR (289) 140 141 298 299 304 305
FROM (290) 100
GLOBAL (291) 118
GREATER (292) 186
GREATEREQUAL (293) 188
GRLT (294) 190
IF (295) 134 135 175 300 301 306 307
IMPORT (296) 99 100
IN (297) 121 140 141 192 193 298 299 304 305
INDENT (298) 162
IS (299) 194 195
LAMBDA (300) 171 172 246 247
LBRACE (301) 227
LEFTSHIFT (302) 204
LEFTSHIFTEQUAL (303) 65
LESS (304) 185
LESSEQUAL (305) 189
LPAR (306) 7 16 17 31 104 225 248 278
LSQB (307) 226 249
MINEQUAL (308) 58
MINUS (309) 209 219
NAME (310) 15 24 26 27 30 106 107 108 116 117 118 119 229 250 278 279
NEWLINE (311) 3 7 8 38 39 162
NOT (312) 181 193 195
NOTEQUAL (313) 191
NUMBER (314) 230
OR (315) 178
PASS (316) 80
PERCENT (317) 214
PERCENTEQUAL (318) 61
PLUS (319) 208 218
PLUSEQUAL (320) 57
PRINT (321) 69 70
RAISE (322) 91 92
RBRACE (323) 227
RETURN (324) 88 89
RIGHTSHIFT (325) 70 205
RIGHTSHIFTEQUAL (326) 66
RPAR (327) 7 16 17 31 104 225 248 278
RSQB (328) 226 249
SEMI (329) 38 40
SLASH (330) 213
SLASHEQUAL (331) 60
STAR (332) 26 103 212 290
STAREQUAL (333) 59
STRING (334) 240 241
TILDE (335) 220
TRY (336) 142 143
VBAREQUAL (337) 63
WHILE (338) 138 139
WITH (339) 150
YIELD (340) 310 311


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
start (87)
    on left: 1, on right: 0
file_input (88)
    on left: 2, on right: 1
pick_NEWLINE_stmt (89)
    on left: 3 4, on right: 5
star_NEWLINE_stmt (90)
    on left: 5 6, on right: 2 5
decorator (91)
    on left: 7 8, on right: 11 12
opt_arglist (92)
    on left: 9 10, on right: 7 248
decorators (93)
    on left: 11 12, on right: 11 13 14
decorated (94)
    on left: 13 14, on right: 133
funcdef (95)
    on left: 15, on right: 14 131
parameters (96)
    on left: 16 17, on right: 15
varargslist (97)
    on left: 18 19, on right: 16 171 246
opt_EQUAL_test (98)
    on left: 20 21, on right: 19 22
star_fpdef_COMMA (99)
    on left: 22 23, on right: 18 19 22
opt_DOUBLESTAR_NAME (100)
    on left: 24 25, on right: 26
pick_STAR_DOUBLESTAR (101)
    on left: 26 27, on right: 18
opt_COMMA (102)
    on left: 28 29, on right: 19 73 77 165 243 245 275 277 289
fpdef (103)
    on left: 30 31, on right: 19 22 32 33 34
fplist (104)
    on left: 32 33, on right: 31
star_fpdef_notest (105)
    on left: 34 35, on right: 32 33 34
stmt (106)
    on left: 36 37, on right: 4 163 164
simple_stmt (107)
    on left: 38 39, on right: 36 161
star_SEMI_small_stmt (108)
    on left: 40 41, on right: 38 39 40
small_stmt (109)
    on left: 42 43 44 45 46 47 48 49 50, on right: 38 39 40
expr_stmt (110)
    on left: 51 52, on right: 42
pick_yield_expr_testlist (111)
    on left: 53 54, on right: 51 55
star_EQUAL (112)
    on left: 55 56, on right: 52 55
augassign (113)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68, on right: 51
print_stmt (114)
    on left: 69 70, on right: 43
star_COMMA_test (115)
    on left: 71 72, on right: 71 73 243 245 268 269 277
opt_test (116)
    on left: 73 74, on right: 69
plus_COMMA_test (117)
    on left: 75 76, on right: 75 77
opt_test_2 (118)
    on left: 77 78, on right: 70
del_stmt (119)
    on left: 79, on right: 44
pass_stmt (120)
    on left: 80, on right: 45
flow_stmt (121)
    on left: 81 82 83 84 85, on right: 46
break_stmt (122)
    on left: 86, on right: 81
continue_stmt (123)
    on left: 87, on right: 82
return_stmt (124)
    on left: 88 89, on right: 83
yield_stmt (125)
    on left: 90, on right: 85
raise_stmt (126)
    on left: 91 92, on right: 84
opt_COMMA_test (127)
    on left: 93 94, on right: 95 121
opt_test_3 (128)
    on left: 95 96, on right: 91
import_stmt (129)
    on left: 97 98, on right: 47
import_name (130)
    on left: 99, on right: 97
import_from (131)
    on left: 100, on right: 98
pick_dotted_name (132)
    on left: 101 102, on right: 100
pick_STAR_import (133)
    on left: 103 104 105, on right: 100
import_as_name (134)
    on left: 106 107, on right: 110 111 112
dotted_as_name (135)
    on left: 108 109, on right: 114 115
import_as_names (136)
    on left: 110 111, on right: 104 105
star_COMMA_import_as_name (137)
    on left: 112 113, on right: 110 111 112
dotted_as_names (138)
    on left: 114 115, on right: 99 115
dotted_name (139)
    on left: 116 117, on right: 7 8 101 108 109 117
global_stmt (140)
    on left: 118, on right: 48
star_COMMA_NAME (141)
    on left: 119 120, on right: 118 119
exec_stmt (142)
    on left: 121 122, on right: 49
assert_stmt (143)
    on left: 123 124, on right: 50
compound_stmt (144)
    on left: 125 126 127 129 130 131 132 133, on right: 37
$@1 (145)
    on left: 128, on right: 129
if_stmt (146)
    on left: 134 135, on right: 125
star_ELIF (147)
    on left: 136 137, on right: 134 135 136
while_stmt (148)
    on left: 138 139, on right: 126
for_stmt (149)
    on left: 140 141, on right: 127
try_stmt (150)
    on left: 142 143, on right: 129
plus_except (151)
    on left: 144 145, on right: 142 144
opt_ELSE (152)
    on left: 146 147, on right: 142
opt_FINALLY (153)
    on left: 148 149, on right: 142
with_stmt (154)
    on left: 150, on right: 130
star_COMMA_with_item (155)
    on left: 151 152, on right: 150 151
with_item (156)
    on left: 153 154, on right: 150 151
except_clause (157)
    on left: 155 156, on right: 144 145
pick_AS_COMMA (158)
    on left: 157 158, on right: 159
opt_AS_COMMA (159)
    on left: 159 160, on right: 155
suite (160)
    on left: 161 162, on right: 15 134 135 136 138 139 140 141 142
    143 144 145 146 148 150 278 279
plus_stmt (161)
    on left: 163 164, on right: 162 163
testlist_safe (162)
    on left: 165 166, on right: 298 299
plus_COMMA_old_test (163)
    on left: 167 168, on right: 165 167
old_test (164)
    on left: 169 170, on right: 165 166 167 168 171 172 300 301 306
    307
old_lambdef (165)
    on left: 171 172, on right: 170
test (166)
    on left: 173 174, on right: 20 70 71 73 75 76 91 93 95 121 123
    124 134 135 136 138 139 153 154 155 159 175 242 243 244 245 246
    247 256 258 262 268 269 270 271 272 287 290 291 292 293 308 309
opt_IF_ELSE (167)
    on left: 175 176, on right: 173
or_test (168)
    on left: 177 178, on right: 169 173 175 178 304 305
and_test (169)
    on left: 179 180, on right: 177 178 180
not_test (170)
    on left: 181 182, on right: 179 180 181
comparison (171)
    on left: 183 184, on right: 182 184
comp_op (172)
    on left: 185 186 187 188 189 190 191 192 193 194 195, on right:
    184
expr (173)
    on left: 196 197, on right: 121 122 153 183 184 197 264 265 266
xor_expr (174)
    on left: 198 199, on right: 196 197 199
and_expr (175)
    on left: 200 201, on right: 198 199 201
shift_expr (176)
    on left: 202 203, on right: 200 201 203
pick_LEFTSHIFT_RIGHTSHIFT (177)
    on left: 204 205, on right: 203
arith_expr (178)
    on left: 206 207, on right: 202 203 207
pick_PLUS_MINUS (179)
    on left: 208 209, on right: 207
term (180)
    on left: 210 211, on right: 206 207 211
pick_multop (181)
    on left: 212 213 214 215, on right: 211
factor (182)
    on left: 216 217, on right: 210 211 216 221
pick_unop (183)
    on left: 218 219 220, on right: 216
power (184)
    on left: 221 222, on right: 217
star_trailer (185)
    on left: 223 224, on right: 221 222 223
atom (186)
    on left: 225 226 227 228 229 230 231, on right: 221 222
pick_yield_expr_testlist_comp (187)
    on left: 232 233, on right: 234
opt_yield_test (188)
    on left: 234 235, on right: 225
opt_listmaker (189)
    on left: 236 237, on right: 226
opt_dictorsetmaker (190)
    on left: 238 239, on right: 227
plus_STRING (191)
    on left: 240 241, on right: 231 240
listmaker (192)
    on left: 242 243, on right: 236
testlist_comp (193)
    on left: 244 245, on right: 233
lambdef (194)
    on left: 246 247, on right: 174
trailer (195)
    on left: 248 249 250, on right: 223
subscriptlist (196)
    on left: 251 252, on right: 249
star_COMMA_subscript (197)
    on left: 253 254, on right: 251 252 253
subscript (198)
    on left: 255 256 257, on right: 251 252 253
opt_test_only (199)
    on left: 258 259, on right: 257
opt_sliceop (200)
    on left: 260 261, on right: 257
sliceop (201)
    on left: 262 263, on right: 260
exprlist (202)
    on left: 264 265, on right: 79 140 141 298 299 304 305
star_COMMA_expr (203)
    on left: 266 267, on right: 264 265 266
testlist (204)
    on left: 268 269, on right: 51 52 54 88 140 141 280 310
dictorsetmaker (205)
    on left: 270 271, on right: 238
star_test_COLON_test (206)
    on left: 272 273, on right: 272 275
pick_for_test_test (207)
    on left: 274 275, on right: 270
pick_for_test (208)
    on left: 276 277, on right: 271
classdef (209)
    on left: 278 279, on right: 13 132
opt_testlist (210)
    on left: 280 281, on right: 278
arglist (211)
    on left: 282, on right: 9
star_argument_COMMA (212)
    on left: 283 284, on right: 282 283
star_COMMA_argument (213)
    on left: 285 286, on right: 285 290
opt_DOUBLESTAR_test (214)
    on left: 287 288, on right: 290
pick_argument (215)
    on left: 289 290 291, on right: 282
argument (216)
    on left: 292 293, on right: 283 285 289
opt_comp_for (217)
    on left: 294 295, on right: 292
list_iter (218)
    on left: 296 297, on right: 298 300
list_for (219)
    on left: 298 299, on right: 242 296
list_if (220)
    on left: 300 301, on right: 297
comp_iter (221)
    on left: 302 303, on right: 304 306
comp_for (222)
    on left: 304 305, on right: 244 274 276 294 302
comp_if (223)
    on left: 306 307, on right: 303
testlist1 (224)
    on left: 308 309, on right: 228 309
yield_expr (225)
    on left: 310 311, on right: 53 90 232
star_DOT (226)
    on left: 312 313, on right: 101 102 312


State 0

    0 $accept: . start $end

    $default  reduce using rule 6 (star_NEWLINE_stmt)

    start              go to state 1
    file_input         go to state 2
    star_NEWLINE_stmt  go to state 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    1 start: file_input .

    $default  reduce using rule 1 (start)


State 3

    2 file_input: star_NEWLINE_stmt . ENDMARKER
    5 star_NEWLINE_stmt: star_NEWLINE_stmt . pick_NEWLINE_stmt

    ASSERT     shift, and go to state 5
    AT         shift, and go to state 6
    BACKQUOTE  shift, and go to state 7
    BREAK      shift, and go to state 8
    CLASS      shift, and go to state 9
    CONTINUE   shift, and go to state 10
    DEF        shift, and go to state 11
    DEL        shift, and go to state 12
    ENDMARKER  shift, and go to state 13
    EXEC       shift, and go to state 14
    FOR        shift, and go to state 15
    FROM       shift, and go to state 16
    GLOBAL     shift, and go to state 17
    IF         shift, and go to state 18
    IMPORT     shift, and go to state 19
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NEWLINE    shift, and go to state 26
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PASS       shift, and go to state 29
    PLUS       shift, and go to state 30
    PRINT      shift, and go to state 31
    RAISE      shift, and go to state 32
    RETURN     shift, and go to state 33
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35
    WHILE      shift, and go to state 36
    WITH       shift, and go to state 37
    YIELD      shift, and go to state 38

    $default  reduce using rule 128 ($@1)

    pick_NEWLINE_stmt  go to state 39
    decorator          go to state 40
    decorators         go to state 41
    decorated          go to state 42
    funcdef            go to state 43
    stmt               go to state 44
    simple_stmt        go to state 45
    small_stmt         go to state 46
    expr_stmt          go to state 47
    print_stmt         go to state 48
    del_stmt           go to state 49
    pass_stmt          go to state 50
    flow_stmt          go to state 51
    break_stmt         go to state 52
    continue_stmt      go to state 53
    return_stmt        go to state 54
    yield_stmt         go to state 55
    raise_stmt         go to state 56
    import_stmt        go to state 57
    import_name        go to state 58
    import_from        go to state 59
    global_stmt        go to state 60
    exec_stmt          go to state 61
    assert_stmt        go to state 62
    compound_stmt      go to state 63
    $@1                go to state 64
    if_stmt            go to state 65
    while_stmt         go to state 66
    for_stmt           go to state 67
    with_stmt          go to state 68
    test               go to state 69
    or_test            go to state 70
    and_test           go to state 71
    not_test           go to state 72
    comparison         go to state 73
    expr               go to state 74
    xor_expr           go to state 75
    and_expr           go to state 76
    shift_expr         go to state 77
    arith_expr         go to state 78
    term               go to state 79
    factor             go to state 80
    pick_unop          go to state 81
    power              go to state 82
    atom               go to state 83
    plus_STRING        go to state 84
    lambdef            go to state 85
    testlist           go to state 86
    classdef           go to state 87
    yield_expr         go to state 88


State 4

    0 $accept: start $end .

    $default  accept


State 5

  123 assert_stmt: ASSERT . test COMMA test
  124            | ASSERT . test

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    test         go to state 89
    or_test      go to state 70
    and_test     go to state 71
    not_test     go to state 72
    comparison   go to state 73
    expr         go to state 74
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    lambdef      go to state 85


State 6

    7 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 90

    dotted_name  go to state 91


State 7

  228 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    test         go to state 92
    or_test      go to state 70
    and_test     go to state 71
    not_test     go to state 72
    comparison   go to state 73
    expr         go to state 74
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    lambdef      go to state 85
    testlist1    go to state 93


State 8

   86 break_stmt: BREAK .

    $default  reduce using rule 86 (break_stmt)


State 9

  278 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  279         | CLASS . NAME COLON suite

    NAME  shift, and go to state 94


State 10

   87 continue_stmt: CONTINUE .

    $default  reduce using rule 87 (continue_stmt)


State 11

   15 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 95


State 12

   79 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    expr         go to state 96
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    exprlist     go to state 97


State 13

    2 file_input: star_NEWLINE_stmt ENDMARKER .

    $default  reduce using rule 2 (file_input)


State 14

  121 exec_stmt: EXEC . expr IN test opt_COMMA_test
  122          | EXEC . expr

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    expr         go to state 98
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84


State 15

  140 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  141         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    expr         go to state 96
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    exprlist     go to state 99


State 16

  100 import_from: FROM . pick_dotted_name IMPORT pick_STAR_import

    $default  reduce using rule 313 (star_DOT)

    pick_dotted_name  go to state 100
    star_DOT          go to state 101


State 17

  118 global_stmt: GLOBAL . NAME star_COMMA_NAME

    NAME  shift, and go to state 102


State 18

  134 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  135        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35
